# generic-marine-jedi

./: .gitignore  CMakeLists.txt  README.md
bundle/: CMakeLists.txt
cycling/: README.md  cycle.sh
cycling/config/: errorcovariance_training.yaml  obsop_name_map.yaml  setcorscales.yaml  var.yaml
cycling/obs/: sst_noaa19_20180415.nc  sst_noaa19_20180416.nc
src/genericMarine/: CMakeLists.txt  Traits.h
src/genericMarine/Covariance/: Covariance.cc
src/genericMarine/Fields/: Fields.cc  Fields.h
src/genericMarine/Geometry/: Geometry.cc  Geometry.h
src/genericMarine/Increment/: Increment.cc
src/genericMarine/LinearVariableChange/: LinearVariableChange.h
src/genericMarine/Model/: CMakeLists.txt  ModelAdvection.cc  ModelAdvection.h  ModelAdvectionBase.cc  ModelAdvectionBase.h  ModelAdvectionByLat.cc  ModelAdvectionByLat.h  ModelSimpleWave.cc  ModelSimpleWave.h  ModelZonalAdvection.cc  ModelZonalAdvection.h  README.md
src/genericMarine/ModelData/: CMakeLists.txt  ModelData.h
src/genericMarine/VariableChange/: VariableChange.cc  VariableChange.h
src/mains/: CMakeLists.txt  ErrorCovarianceToolbox.cc  ErrorCovarianceTraining.cc  Forecast.cc  HofX4D.cc  SetCorScales.cc
test/: CMakeLists.txt
test/data_static/: landmask_0p25.nc  landmask_1p0.nc  obs_sst.nc  sst_1p0.nc
test/executables/: TestModel.cc
test/testinput/: 3dfgat.yml  3dvar.yml  dirac.yml  errorcovariance_training.yml  forecast_advection.yml  forecast_simplewave.yml  geometry.yml  hofx3d.yml  hofx4d.yml  increment.yml  model.yml  modelaux.yml  setcorscales.yml  state.yml  staticbinit.yml  var.yml
test/testref/: 3dfgat.ref  3dvar.ref  dirac.ref  errorcovariance_training.ref  forecast_advection.ref  forecast_simplewave.ref  geometry.ref  hofx3d.ref  hofx4d.ref  increment.ref  setcorscales.ref  state.ref  var.ref
